# Remote-Controller-Accessory-for-Ventilators

./: LICENSE  README.md
Android/Remote_Controller_App/: build.gradle  local.properties  settings.gradle
Android/Remote_Controller_App/app/: CMakeLists.txt  build.gradle
Android/Remote_Controller_App/app/src/main/: AndroidManifest.xml
Android/Remote_Controller_App/app/src/main/cpp/: Store.cpp  Store.h
Android/Remote_Controller_App/app/src/main/java/com/remote_controller/: MainActivity.kt  Store.kt
Android/Remote_Controller_App/app/src/main/res/layout/: activity_main.xml
Android/Remote_Controller_App/app/src/main/res/values/: colors.xml  strings.xml
Android/Remote_Controller_App/gradle/wrapper/: gradle-wrapper.properties
Android/Remote_Controller_App/knoblibrary/: build.gradle
Android/Remote_Controller_App/knoblibrary/src/main/java/it/beppi/knoblibrary/: Knob.java
Android/gradle/wrapper/: gradle-wrapper.properties
CAD/G5_stl/: clamp_arm_G5.stl  groundplate_G5.stl  knob_connector.stl  lid_G5.stl  pi_head_G5.stl  shaft_inner_G5.stl  shaft_outer_G5.stl  tower - head.stl  tower - tower_plate.stl  tower.stl
Raspberry/: CMakeLists.txt  README.md  execute.py
Raspberry/include/: settings.hpp  tcp_actuator_control_interpreter.hpp  tcp_client.hpp  tcp_interpreter.hpp  tcp_messages.hpp
Raspberry/src/: main.cpp  tcp_actuator_control_interpreter.cpp  tcp_client.cpp
Raspberry/stepper/include/: StepperMotor.hpp
Raspberry/stepper/src/: StepperMotor.cpp
Raspberry/ws28128-rpi/: README.md
motion/: motion.conf
